<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="0dp"
        tools:context="com.example.android.greekislandsquiz.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewStyleHeader"
                android:layout_height="40dp"
                android:text="@string/app_title" />


            <EditText
                android:id="@+id/yourName"
                style="@style/EditTextStyle"
                android:hint="@string/yourName" />


            <TextView
                style="@style/IslandTagStyle"
                android:text="@string/island1" />


            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/santorini" />

            <RadioGroup
                android:id="@+id/Rg1"
                style="@style/RadioGroupStyle">


                <RadioButton
                    android:id="@+id/Rb1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/zakinthos" />

                <RadioButton
                    android:id="@+id/Rb2"
                    style="@style/RadioButtonStyle"
                    android:text="@string/santorini" />


                <RadioButton
                    android:id="@+id/Rb3"
                    style="@style/RadioButtonStyle"
                    android:text="@string/siros" />

                <RadioButton
                    android:id="@+id/Rb4"
                    style="@style/RadioButtonStyle"
                    android:text="@string/corfu" />

            </RadioGroup>

            <TextView
                style="@style/IslandTagStyle"
                android:text="@string/island2" />

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/crete" />

            <RadioGroup
                android:id="@+id/Rg2"
                style="@style/RadioGroupStyle">


                <RadioButton

                    android:id="@+id/Rb5"
                    style="@style/RadioButtonStyle"
                    android:text="@string/zakinthos" />

                <RadioButton
                    android:id="@+id/Rb6"
                    style="@style/RadioButtonStyle"
                    android:text="@string/mykonos" />


                <RadioButton
                    android:id="@+id/Rb7"
                    style="@style/RadioButtonStyle"
                    android:text="@string/crete" />

                <RadioButton
                    android:id="@+id/Rb8"
                    style="@style/RadioButtonStyle"
                    android:text="@string/corfu" />

            </RadioGroup>


            <TextView
                style="@style/IslandTagStyle"
                android:text="@string/island3" />

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/zakinthos" />

            <RadioGroup
                android:id="@+id/Rg3"
                style="@style/RadioGroupStyle">


                <RadioButton
                    android:id="@+id/Rb9"
                    style="@style/RadioButtonStyle"
                    android:text="@string/zakinthos" />

                <RadioButton
                    android:id="@+id/Rb10"
                    style="@style/RadioButtonStyle"
                    android:text="@string/mykonos" />


                <RadioButton
                    android:id="@+id/Rb11"
                    style="@style/RadioButtonStyle"
                    android:text="@string/crete" />

                <RadioButton
                    android:id="@+id/Rb12"
                    style="@style/RadioButtonStyle"
                    android:text="@string/corfu" />

            </RadioGroup>

            <TextView
                style="@style/IslandTagStyle"
                android:text="@string/island4" />

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/mykonos" />

            <RadioGroup
                android:id="@+id/Rg4"
                style="@style/RadioGroupStyle">


                <RadioButton
                    android:id="@+id/Rb13"
                    style="@style/RadioButtonStyle"
                    android:text="@string/skiathos" />

                <RadioButton
                    android:id="@+id/Rb14"
                    style="@style/RadioButtonStyle"
                    android:text="@string/mykonos" />


                <RadioButton
                    android:id="@+id/Rb15"
                    style="@style/RadioButtonStyle"
                    android:text="@string/crete" />

                <RadioButton
                    android:id="@+id/Rb16"
                    style="@style/RadioButtonStyle"
                    android:text="@string/corfu" />

            </RadioGroup>


            <TextView
                style="@style/IslandTagStyle"
                android:text="@string/island5" />

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/milos" />

            <RadioGroup
                android:id="@+id/Rg5"
                style="@style/RadioGroupStyle">


                <RadioButton
                    android:id="@+id/Rb17"
                    style="@style/RadioButtonStyle"
                    android:text="@string/skiathos" />

                <RadioButton
                    android:id="@+id/Rb18"
                    style="@style/RadioButtonStyle"
                    android:text="@string/mykonos" />


                <RadioButton
                    android:id="@+id/Rb19"
                    style="@style/RadioButtonStyle"
                    android:text="@string/crete" />

                <RadioButton
                    android:id="@+id/Rb20"
                    style="@style/RadioButtonStyle"
                    android:text="@string/milos" />

            </RadioGroup>


            <TextView
                style="@style/TextViewStyleQuestion"
                android:layout_height="40dp"
                android:text="@string/question6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/visitCorfu"
                    style="@style/CheckBoxStyle"
                    android:text="@string/corfu" />

                <CheckBox
                    android:id="@+id/visitCrete"
                    style="@style/CheckBoxStyle"
                    android:text="@string/crete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/visitMilos"
                    style="@style/CheckBoxStyle"
                    android:text="@string/milos" />

                <CheckBox
                    android:id="@+id/visitMykonos"
                    style="@style/CheckBoxStyle"
                    android:text="@string/mykonos" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/visitSantorini"
                    style="@style/CheckBoxStyle"
                    android:text="@string/santorini" />

                <CheckBox
                    android:id="@+id/visitSiros"
                    style="@style/CheckBoxStyle"
                    android:text="@string/siros" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/visitSkiathos"
                    style="@style/CheckBoxStyle"
                    android:text="@string/skiathos" />

                <CheckBox
                    android:id="@+id/visitZakinthos"
                    style="@style/CheckBoxStyle"
                    android:text="@string/zakinthos" />
            </LinearLayout>

            <TextView
                style="@style/TextViewStyleQuestion"
                android:layout_height="40dp"
                android:text="@string/question7" />

            <EditText
                android:id="@+id/yourAnswer"
                style="@style/EditTextStyle"
                android:freezesText="true"
                android:hint="@string/yourAnswer" />


            <Button
                android:id="@+id/submit_button"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="submitAnswers"
                android:text="@string/Submit" />


        </LinearLayout>


    </RelativeLayout>
</ScrollView>